infra-k8s/base/namespaces/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: isolate-namespace
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector: {}
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: linkerd-viz
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: linkerd
